--- a/css/custom.css
+++ b/css/custom.css
@@ -82,20 +82,32 @@ mark {
 }
 
 .trigger:checked + .all .hamburg .hbar1 {
-    -webkit-transform: rotate(-45deg) translate(-6px, 6px);
-    transform: rotate(-45deg) translate(-6px, 6px);
+    -webkit-transform: rotate(-45deg) translate(-3px, 5px);
+    transform: rotate(-45deg) translate(-3px, 5px);
 }
 
 .trigger:checked + .all .hamburg .hbar2 {opacity: 0;}
 
 .trigger:checked + .all .hamburg .hbar3 {
-    -webkit-transform: rotate(45deg) translate(-4px, -4px);
-    transform: rotate(45deg) translate(-4px, -4px);
+    -webkit-transform: rotate(45deg) translate(-5px, -7px);
+    transform: rotate(45deg) translate(-5px, -7px);
+}
+.trigger:checked + .all .hamburg { 
+    background: rgba(119, 119, 119, 0) !important; 
+    border-radius: 10px;
+    transition: all 0.6s;
+}
+.trigger:checked + .all .hamburg { 
+    background: rgba(119, 119, 119, 0.41) !important; 
 }
 @media (max-width: 550px) {
 	ul .menu-content a li {
+		margin-top: 20px;
+	}
+	.hamburg { width: 100%; padding: 6px 0 10px 0; margin-bottom: -12px; }
+	ul .menu-content a li {
 	  display: block;
-	  padding: 18px 20px;
+	  padding: 16px 20px;
 	}
 	.mobile-only { display: none; }
 	
@@ -227,10 +239,6 @@ divisor {
 @media (max-width: 420px) {
     .size_p { display: block; }    
     .size_m { display: none; }   
-    .header { background-image: url('../images/header_p.jpg'); }
-    .azul{ background-image: url('../images/guitar_p.jpg'); }
-    .music { background-image: url('../images/music_p.jpg'); }
-    .wmusic { background-image: url('../images/wmusic_p.jpg'); }
 }
 .video {
   max-width: 100%    !important;
