--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,5 @@
 /* Especifico ============================================================= */
+/* Autor: JimmyFilips */ 
 .menu {
     background: rgba(18, 18, 18, 0.82);
     position: fixed;
