--- a/css/custom.css
+++ b/css/custom.css
@@ -1,13 +1,96 @@
-/* Especifico ============================================================= */
+/* Mobile/PC - Universal tag
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+@media (min-width: 480px) {
+	.mobile-only { display: none; }
+}
+@media (max-width: 480px) {
+	.pc-only { display: none; }
+}
+
+/* Backgrounds - Sections
+–––––––––––––––––––––––––––––––––––––––––––––––––– */ 
+.header, .desenvolvimento {
+    background-position: center;
+    background-size: cover;
+}
+.musicas, .trailer {
+    background-repeat: repeat;
+    background-position: top left;
+}
+@media (min-width: 0px) and (max-width: 1000px) { 
+    .header { 
+        background-image: url('../img/header_m.jpg'); 
+    }
+    .desenvolvimento { 
+        background-image: url('../img/desenvolvimento_m.jpg'); 
+    }
+    .musicas { 
+        background-image: url('../img/musicas_m.jpg'); 
+    }
+    .trailer { 
+        background-image: url('../img/trailer_m.jpg'); 
+    }
+}
+@media (min-width: 1000px) { 
+    .header { 
+        background-image: url('../img/header_g.jpg'); 
+    }
+    .desenvolvimento { 
+        background-image: url('../img/desenvolvimento_g.jpg'); 
+    }
+    .musicas { 
+        background-image: url('../img/musicas_g.jpg'); 
+    }
+    .trailer { 
+        background-image: url('../img/trailer_g.jpg'); 
+    }
+}
+
+/* Estilos - Padronização 
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.section {
+    padding: 6rem 0;
+    text-align: center;
+}
+.extra-space { 
+    /* segue o padrao de espaçamento do section */
+    margin-bottom: 6rem !important; 
+} 
+.no-space { 
+    /* zera apenas a margem inferior */
+    margin-bottom: 0 !important; 
+} 
+.texto-grande {
+    font-size: 3.6rem; 
+    font-weight: 300; 
+    line-height: 1.25; 
+    margin-bottom: 2rem;
+}
+.texto-medio {
+    font-size: 2.45rem; 
+    font-weight: 300; 
+    line-height: 1.6;  
+    letter-spacing: -.05rem; 
+    margin-bottom: 2rem;
+}
+.texto-pequeno {
+    font-weight: 300;
+    opacity: .8;
+}
+.texto-left {
+    text-align: left;
+}
+
+/* Nav / Padrão
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 .menu {
-    background: rgba(18, 18, 18, 0.95);
+    background-color: rgba(18, 18, 18, 0.95);
     position: fixed;
     top: 0;
     width: 100%;
     z-index: 100;
 }
 .menu ul {
-    list-style: none;
     padding: 5px;
     margin: 0;
 }
@@ -15,250 +98,188 @@
     display: inline;
     color: #aaaaaa;
     padding: 20px 20px;
-    margin: 0;
     font-size: 0.9em;
-    font-weight: bold;
 }
-.menu ul a li:first-child {padding-right: 5px;}
+.menu ul a li:first-child {
+    padding-right: 5px;
+}
 .menu ul a { 
-	cursor: pointer;
-    color: #ccc; 
-    font-weight: bold;
     text-decoration: none; 
     text-transform: uppercase;
 }
-
-.header {
-    background: #121212;
-    color: #d9d9d9;
-    min-height: 30vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 40vh;
-}
-.texto-header {
-    min-height: 90px;
-    font-size: 1.7em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.texto-header p { margin: 0; }
-.logo { height: 90px; }
-.perfil {
-    width: 100%;
-    max-width: 250px;
-    box-shadow: 0 2px 5px rgba(50,50,90,0.4);
-    border-radius: 5px;
-}
-.footer {
-    padding: 4rem 0 !important;
-}
-mark {
-	background: rgba(255,255,100,0.5);
-	color: white;
-	padding: 5px;
-	line-height: 1.9em;
-}
-/* Menu Hamburguer =================================================== */
-.trigger { display: none !important; }
-
-.hamburg {
-    display: inline-block;
-    cursor: pointer;
-	margin: 0;
+.trigger { 
+    display: none !important; 
 }
 
-.hbar1, .hbar2, .hbar3 {
-    width: 20px;
-    height: 2px;
-    background-color: #aaaaaa;
-    margin: 5px;
-    margin-bottom: 0;
-    padding: 0;
-    transition: 0.4s;
+/* ^ Nav / Mobile
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+@media (min-width: 480px) {
+	.hamburg { display: none; }
 }
-
-.menu-content {
-    margin-top: 4px;
-}
-
-.trigger:checked + .all .hamburg .hbar1 {
-    -webkit-transform: rotate(-45deg) translate(-3px, 5px);
-    transform: rotate(-45deg) translate(-3px, 5px);
-}
-
-.trigger:checked + .all .hamburg .hbar2 {opacity: 0;}
-
-.trigger:checked + .all .hamburg .hbar3 {
-    -webkit-transform: rotate(45deg) translate(-5px, -7px);
-    transform: rotate(45deg) translate(-5px, -7px);
-}
-.trigger:checked + .all .hamburg { 
-    background: rgba(119, 119, 119, 0) !important; 
-    border-radius: 10px;
-    transition: all 0.6s;
-}
-.trigger:checked + .all .hamburg { 
-    background: rgba(119, 119, 119, 0.41) !important; 
-}
-@media (max-width: 550px) {
+@media (max-width: 480px) {
+    /* Icone Hamburguer / Linhas
+    –––––––––––––––––––––––––––– */
+    .hamburg {
+        display: inline-block;
+        cursor: pointer;
+        margin: 0;
+        width: 100%;
+        padding: 6px 0 10px 0;
+        margin-bottom: -12px;
+    }
+    .hbar1, .hbar2, .hbar3 {
+        width: 20px;
+        height: 2px;
+        background-color: #aaaaaa;
+        margin: 5px;
+        margin-bottom: 0;
+        padding: 0;
+        transition: 0.4s;
+    }
+    
+    /* Icone Hamburguer / ANIMAÇÃO
+    –––––––––––––––––––––––––––– */
+    .trigger:checked + .box-menu .hamburg .hbar1 {        
+        -webkit-transform: rotate(-45deg) translate(-3px, 5px);
+        transform: rotate(-45deg) translate(-3px, 5px);
+    }
+    .trigger:checked + .box-menu .hamburg .hbar2 {
+        opacity: 0; 
+    }
+    .trigger:checked + .box-menu .hamburg .hbar3 {
+        -webkit-transform: rotate(45deg) translate(-5px, -7px);
+        transform: rotate(45deg) translate(-5px, -7px);
+    }
+    .trigger + .box-menu .hamburg { 
+        background: rgba(119, 119, 119, 0) !important; 
+        border-radius: 10px;
+        transition: all 0.6s;
+    }
+    .trigger:checked + .box-menu .hamburg { 
+        background: rgba(119, 119, 119, 0.41) !important; 
+    }
+    
+    /* ^ Nav / Menu Superior - Mobile style
+    –––––––––––––––––––––––––––– */
+    .menu-content { margin-top: 4px; }
+    
 	ul .menu-content a:first-child li {
 		margin-top: 18px;
 	}
-	.hamburg { width: 100%; padding: 6px 0 10px 0; margin-bottom: -12px; }
 	ul .menu-content a li {
 	  display: block;
 	  padding: 13px 20px;
 	}
-	.mobile-only { display: none; }
-	
+    
+    /* Menu Mobile / ANIMAÇÃO
+    –––––––––––––––––––––––––––– */
 	ul .menu-content {
 	  overflow: hidden;
+	  min-height: 0px;
 	  max-height: 0px;
 	  transition: all 0.8s;
 	}
-	.trigger:checked + 
-	.all .menu-content {
+	.trigger:checked + .box-menu .menu-content {
+	  min-height: 100vh !important;
 	  max-height: 100vh !important;
 	}
 }
-@media (min-width: 550px) {
-	.hamburg { display: none; }
-	.pc-only { display: none; }
-}
 
-/* Geral ============================================================= */
-.section {
-    padding: 6rem 0 4rem;
+/* Header - Estilo
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.header {
+    background-color: #121212;
+    display: flex;
+    align-items: center;
+    height: 40vh;
+    min-height: 27em;
+}
+.header .row {
     text-align: center;
 }
-.azul {
-    background: #051222;
+
+/* Desenvolvimento - Estilo
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.desenvolvimento {
+    background-color: #051222;
     color: #fff;
 }
-.music {
+.porcentagem {
+    color: #6843ae;
+}
+
+/* Plataforma - Estilo
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.plataforma {
+    background-color: #f9f9f9;
+}
+.logo-img {
+    width: 100%;
+    height: auto;
+    max-width: 200px;
+    box-shadow: 0 2px 5px rgba(50,50,90,0.4);
+    border-radius: 5px;
+}
+
+/* Musicas - Estilo
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.musicas { 
+    background-color: #121212;
     color: #fff;
-	min-height: calc(100vh - 100px);
 }
-.preto {
-    background: #000000;
-    color: #d9d9d9;
-}
-.texto-grande {
-    color: #6843AE;
-    margin-bottom: .5rem;
-}
-.texto-medio {
-    margin-bottom: .3rem;
-}
-.texto-pequeno {
-    font-weight: 300;
-    opacity: .8;
-}
-.destaque {
+.nome-musica {
     color: #6843AE;
 }
-divisor {
-    display: block;
-    padding:  -top: 20px;
-}
-.divisor:after {
-    content: "";
-    margin: 6rem auto;
-    top: 3rem;
-    position: relative;
-    width: 200px;
-    height: 2px;
-    background: #191919;
-}
-.nospace { margin: 0 !important; }
-.space { margin-bottom: 40px !important; }
 
-.texto-grande, .texto-medio {
-  margin-top: 0;
-  margin-bottom: 2rem;
-  font-weight: 300; }
-.texto-grande { 
-    font-size: 3.6rem !important; 
-    line-height: 1.25 !important; 
-    letter-spacing: -.1rem !important; 
-}
-.texto-medio { 
-    font-size: 2.45rem !important; 
-    line-height: 1.6 !important;  
-    letter-spacing: -.05rem !important; 
-}
-@media (min-width: 550px) {
-  .texto-grande { font-size: 4.2rem; }
-  .texto-medio { font-size: 2.4rem; }
-}
-.texto-menor {
-    font-size: 1rem;
-    color: #656565;
+/* Trailer - Estilo
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.trailer {
+    background-color: #f9f9f9;
 }
 
-.a-left {
-    text-align: left;
-}
-.b-right {
-    border-right: 1px dashed #292929;
-}
-
-/* Responsivo ============================================================= */
-
-.size_p { display: none; width: 200px; }    
-.size_m { display: block; width: 400px; } 
-
-.header, .azul, .music {
-    background-position: center;
-    background-size: cover;
-}
-.music {
-    background: #212121 repeat left top;
-}
-.wmusic {
-    background: #212121 repeat left top;
-}
-
-.header { background-image: url('../images/header_g.jpg'); }
-.azul{ background-image: url('../images/guitar_g.jpg'); }
-.music { background-image: url('../images/music_g.jpg'); }
-.wmusic { background-image: url('../images/wmusic_g.jpg'); }
-
-@media (min-width: 1100px) { 
-	.wmusic {
-		min-height: calc(100vh - 100px);
-	}
-}
-
-@media (max-width: 900px) { 
-    .header { background-image: url('../images/header_m.jpg'); }
-    .azul{ background-image: url('../images/guitar_m.jpg'); }
-    .music { background-image: url('../images/music_m.jpg'); }
-    .wmusic { background-image: url('../images/wmusic_m.jpg'); }
-}
-@media (max-width: 420px) {
-    .size_p { display: block; }    
-    .size_m { display: none; }   
-}
-.video {
-  max-width: 100%    !important;
-  height: auto   !important;
-}
-.embed-container { 
+/* Vimeo - Estilo
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.embed-vimeo { 
     position: relative; 
-    padding-bottom: 56.25%; 
-    height: 0; 
+    padding-bottom: 56.25%; /* Medida padronizada / Vimeo */
     overflow: hidden; 
     max-width: 100%; 
     height: auto; 
 } 
-.embed-container iframe, .embed-container object, .embed-container embed { 
+.embed-vimeo iframe, .embed-vimeo object, .embed-vimeo embed { 
     position: absolute; 
     top: 0; 
     left: 0; 
     width: 100%; 
     height: 100%; 
+}
+
+/* Footer - Estilo
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.footer {
+    background-color: #121212;
+    color: #fff;
+    padding: 2rem 0;
+}
+.ft-lg-img {
+    width: 100%;
+    max-width: 200px;
+}
+.ft-lg-column {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 90px;
+}
+.footer-border {}
+.divisor {
+    margin-bottom: 1.5rem;
+}
+.divisor:after {
+    content: "";
+    margin: 0 auto;
+    position: relative;
+    width: 200px;
+    height: 2px;
+    background: #191919;
 }
